Se cambio idRuta por idPunto en vistaAddPuntos

--- a/proyect/Vistas/VistaAddPuntos.html
+++ b/proyect/Vistas/VistaAddPuntos.html
@@ -17,8 +17,8 @@
     <div class="container" align="center">
         <form action="http://127.0.0.1:1337/routes" method="POST">
             <div class="container from-group" align="center">
-                <label for="idRuta"></label>
-                <input type="text" name="idRuta" placeholder="Id Ruta" id="idRuta" class="form-control">
+                <label for="idPunto"></label>
+                <input type="text" name="idPunto" placeholder="Id Punto" id="idPunto" class="form-control">
             </div>
             <div class="container" align="center">
                 <label for="longitud"></label>
