--- a/proyect/Vistas/IndexChat.html
+++ b/proyect/Vistas/IndexChat.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-	<title>Login</title>
-    <meta charset="utf-8">    
-	<!--Includes-->
-	<script src="../Includes/jquery-2.1.0.min.js" type="text/javascript"></script>
+    <title>Login</title>
+    <meta charset="utf-8">
+    <!--Includes-->
+    <script src="../Includes/jquery-2.1.0.min.js" type="text/javascript"></script>
     <script src="../Includes/jquery-ui-1.10.4/js/jquery-ui-1.10.4.custom.js" type="text/javascript"></script>
     <script src="../Includes/bootstrap-fileinput-master/js/fileinput.min.js" type="text/javascript"></script>
     <script src="../Includes/bootstrap-3.3.6-dist/js/bootstrap.min.js" type="text/javascript"></script>
@@ -13,14 +13,20 @@
     <script src="../Js/StriptChat.js" type="text/javascript"></script>
 </head>
 
- <body class="body">
-        <div class="container" id="container">
+<body class="body">
+    <div class="container" id="container">
         <button id="enviar" class="btn btn-lg">PROBAR POST</button>
-        <button id="enviarget" class="btn btn-lg">Ingresar Ruta</button>
+        <button id="enviarget" class="btn-lg btn-info">View Routes</button>
 
-            <!--_______________TITULO_________________-->
-           
-            <!--<footer class="footer bordesRedondos"><center><h4>Juventud Manizales</h4></center></footer>-->
-        </div>
-    </body>    
+        <!--_______________TITULO_________________-->
+
+        <!--<footer class="footer bordesRedondos"><center><h4>Juventud Manizales</h4></center></footer>-->
+    </div>
+
+    <div class="container col-xs-12 center-block">
+        <table id="tableResponse" class="table table-bordered">
+            <!-- Acá se muestra el resultado del GET-->
+        </table>
+    </div>
+</body>
 </html>
