-Funcionando solo con una referecia a la base de datos, esta en models->Connection son tres lineas para usarla, en las rutas esta ya implementado, si tienen dudas me preguntan
-Vista principal de usuario parcial

--- a/proyect/vistas/indexBus.html
+++ b/proyect/vistas/indexBus.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>CRUD Bus</title>
-    <link rel="stylesheet" href="../Includes/bootstrap-3.3.6-dist/css/bootstrap.css">
-    <link rel="stylesheet" href="../Css/estiloIndex.css">
+    <link rel="stylesheet" href="../includes/bootstrap-3.3.5-dist/css/bootstrap.min.css">
+
 </head>
 <body class="container">
     <header class="col-xs-12">
@@ -42,8 +42,8 @@
         </div>
     </section>
     <!-- Includes Scripts-->
-    <script src="../Includes/jquery-2.1.0.min.js"></script>
-    <script src="../Js/scriptBus.js"></script>
+    <script src="../includes/jquery-3.2.1.js"></script>
+    <script src="../public/Js/scriptBus.js"></script>
 
 </body>
 </html>
